# FutbolIA

./: .env.docker.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  GUIA_INICIO_RAPIDO.md  LICENSE  Makefile  OPTIMIZATIONS_SUMMARY.md  QUICK_START_OPTIMIZATIONS.md  README.md  README_OPTIMIZATIONS.md  SECURITY.md  Taskfile.yml  abrir-puerto-firewall.bat  comandos.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CLUSTERING_MINERIA_DATOS.md  DIAGNOSTICO_CONEXION.md  FLUJO_DATOS_EQUIPOS.md  GUIA_INICIO_RAPIDO.md  PIPELINE_MINERIA_DATOS_GLOBAL.md  SOLUCION_CORS_401.md  SOLUCION_ERROR_CONEXION.md  SOLUCION_RAPIDA_TIMEOUT.md  comandos.md
docs-optimizations/: CHANGES_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_CHECKLIST.md  VISUAL_BEFORE_AFTER.md
futbolia-backend/: .dockerignore  .env  .env.example  .env.template  .gitignore  APIS_FUTBOL_COMPARACION.md  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  TECHNICAL_DOCUMENTATION.md  docker-compose.yml  main.py  pyproject.toml  test_api_response.py  test_full_system.py  test_international.py  test_players.py
futbolia-backend/data/chromadb/: chroma.sqlite3
futbolia-backend/src/: __init__.py  main.py
futbolia-backend/src/core/: __init__.py  background_jobs.py  cache.py  config.py  fuzzy_search.py  logger.py  rate_limit.py
futbolia-backend/src/domain/: __init__.py  entities.py
futbolia-backend/src/infrastructure/: __init__.py
futbolia-backend/src/infrastructure/chromadb/: __init__.py  player_store.py  seed_data.py
futbolia-backend/src/infrastructure/clustering/: __init__.py  advanced_clustering.py  match_predictor.py  team_clustering.py
futbolia-backend/src/infrastructure/datasets/: __init__.py  data_downloader.py  dataset_manager.py  league_registry.py
futbolia-backend/src/infrastructure/db/: dixie_stats.py  mongodb.py  prediction_repository.py  team_repository.py  user_repository.py
futbolia-backend/src/infrastructure/etl/: __init__.py  extractor.py  loader.py  pipeline.py  transformer.py
futbolia-backend/src/infrastructure/external_api/: __init__.py  api_football.py  api_selector.py  football_api.py  thesportsdb.py
futbolia-backend/src/infrastructure/llm/: __init__.py  dixie.py
futbolia-backend/src/infrastructure/metrics/: __init__.py  metrics_tracker.py  model_evaluator.py  prediction_metrics.py
futbolia-backend/src/presentation/: __init__.py  auth_routes.py  league_routes.py  prediction_routes.py  stats_routes.py  team_routes.py
futbolia-backend/src/use_cases/: __init__.py  auth.py  prediction.py
futbolia-backend/tests/: __init__.py  test_api.py  test_config.py
futbolia-mobile/: .env  .env.example  .env.template  .eslintrc.js  .gitignore  Dockerfile  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: dev.ps1  dev.sh  setup.ps1  setup.sh  test.ps1  test.sh
scripts-ayuda/: abrir-puerto-firewall.bat
scriptsInicio/: configurar-proyecto.bat  iniciar-backend.bat  iniciar-frontend.bat
(+44 files in other folders)
