[project]
name = "futbolia-backend"
version = "1.0.0"
description = "FutbolIA Backend - API de predicciones deportivas con IA (Dixie)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=4.0.0",
    "chromadb>=1.3.7",
    "email-validator>=2.3.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=1.26.0",
    "openai>=2.14.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
]
