[project]
name = "goalmind-backend"
version = "1.0.0"
description = "GoalMind Backend - AI-powered football prediction API with Dixie"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=4.0.0",
    "chromadb>=1.3.7",
    "email-validator>=2.3.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=1.26.0",
    "openai>=2.14.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

# ===========================================
# Ruff - Python Linter & Formatter
# ===========================================
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults (FastAPI Depends)
    "N818",  # exception name should end in Error
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===========================================
# Pytest
# ===========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
